--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
   data-wf-site="628a226a09b48a051d58cd93"
 >
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11128308374"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'AW-11128308374');
+    </script>
+    <!-- Event snippet for Subscribe conversion page -->
+    <script>
+      gtag('event', 'conversion', {
+        send_to: 'AW-11128308374/hqGWCLXk9pYYEJaFsrop',
+      });
+    </script>
+
     <meta charset="utf-8" />
     <title>BHuman | AI personalized videos at scale</title>
     <meta
